--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,13 @@
   <title>前端监控SDK</title>
 </head>
 <body>
-  
+  <div id="iv">
+    <button class="ss" onclick="error()">点击</button>
+  </div>
+  <script>
+    function error() {
+      throw new Error("test")
+    }
+  </script>
 </body>
 </html>
